using UnityEngine;

public enum Paramenter_Player
{
    isIdle,
    isMove,
    isJumpFall,
    yVelocity,
    isWallSlide,
    isWallJump,
    isDash,
    isAttack,
    attackIndex,
    attackEnd,
    isSlide,
    isHurt,
    isDeath,
    isCounter,
    isSuccessCounter,
    isFireBlade,
    fireBlade,
    jumpTwo,
}
